--- a/notebooks/model_mnb.ipynb
+++ b/notebooks/model_mnb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,35 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "\n",
-    "csv = pd.read_csv('../sample.csv')\n",
-    "csv['rating100factor'] = csv.rating.apply(lambda v: int(v) * 100)"
+    "df = pd.read_csv('../sample.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The MNB will want integer values, so we'll multiply by a factor of 100 here to get rid of the hundreths place in the ratings:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['rating100factor'] = df.rating.apply(lambda v: int(v) * 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count word occurances, vectorize occurances and then get our data sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,30 +54,27 @@
     "    analyzer = 'word',\n",
     "    lowercase = False\n",
     ")\n",
-    "features = vectorizer.fit_transform(csv.comment.tolist())\n",
+    "features = vectorizer.fit_transform(df.comment.tolist())\n",
     "\n",
     "X_train, X_test, y_train, y_test = \\\n",
     "    train_test_split(\n",
     "        features.toarray(),\n",
-    "        csv.rating100factor.tolist(),\n",
+    "        df.rating100factor.tolist(),\n",
     "        test_size=0.30,\n",
     "        random_state=10,\n",
     "    )"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mnb_model = MultinomialNB()\n",
-    "mnb_model = mnb_model.fit(X_train, y_train)"
+    "Create our first Multinomial Naive Bayes model, feed it the word counts:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +87,8 @@
     }
    ],
    "source": [
-    "# Now that we have a model, let's test it\n",
+    "mnb_model = MultinomialNB()\n",
+    "mnb_model = mnb_model.fit(X_train, y_train)\n",
     "y_pred_mnb = mnb_model.predict(X_test)\n",
     "\n",
     "from sklearn.metrics import precision_score, accuracy_score\n",
@@ -81,12 +101,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "~69% precise"
+    "The first MNB model appears to be ~69% precise."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
