use psql instead of csv

--- a/notebooks/model_mnb.ipynb
+++ b/notebooks/model_mnb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['rating100factor'] = df.rating.apply(lambda v: int(v) * 100)"
+    "df['rating100factor'] = df.rating.apply(lambda v: int(v * 100))"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,15 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3058823529411765\n",
-      "0.3058823529411765\n"
+      "0.2627450980392157\n",
+      "0.2627450980392157\n"
      ]
     }
    ],
@@ -93,15 +93,14 @@
     "\n",
     "from sklearn.metrics import precision_score, accuracy_score\n",
     "\n",
-    "print(accuracy_score(y_test, y_pred_mnb))\n",
-    "print(precision_score(y_test, y_pred_mnb, average=\"micro\"))"
+    "print(accuracy_score(y_test, y_pred_mnb))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first MNB model appears to be ~69% precise."
+    "The first MNB model appears to be ~75% precise."
    ]
   },
   {
@@ -123,9 +122,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ds",
    "language": "python",
-   "name": "python3"
+   "name": "ds"
   },
   "language_info": {
    "codemirror_mode": {
