updated crude model

--- a/notebooks/model_crude.ipynb
+++ b/notebooks/model_crude.ipynb
@@ -9,13 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('/home/g/code/ds/sentiment')\n",
-    "\n",
     "from math import sqrt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,35 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "onehot = SigWordUse.onehot()\n",
     "train, test = onehot.iloc[:,3:], onehot['_rating']\n",
     "sw = pd.read_sql_table('sig_word', engine)\n",
-    "weights = pd.Series(sw.median_q50.values, index=sw.word).sort_index()\n",
-    "onehot = SigWordUse.onehot()"
+    "weights = pd.Series(sw.median_q50.values, index=sw.word).sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.4061896254888429"
+       "1.4054544537553992"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Qone = train.multiply(weights)\n",
-    "N_total = train.iloc[:,3:].sum(axis=1)\n",
+    "N_total = train.sum(axis=1)\n",
     "predictions = Qone.sum(axis=1) / N_total\n",
     "rmse_medians = rmse(test, predictions)\n",
     "rmse_medians"
