--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -28,8 +28,8 @@
     "onehot = et.SigWordUse.onehot()\n",
     "train, test = onehot.iloc[:,3:], onehot['_rating']\n",
     "game_reviews = pd.read_sql_table('game_review', db.engine)\n",
-    "sw = pd.read_sql_table('sig_word', db.engine)\n",
-    "weights = pd.Series(sw.median_q50.values, index=sw.word).sort_index()"
+    "sig_words = pd.read_sql_table('sig_word', db.engine)\n",
+    "weights = pd.Series(sig_words.median_q50.values, index=sig_words.word).sort_index()"
    ]
   },
   {
@@ -577,8 +577,8 @@
     }
    ],
    "source": [
-    "dispersion = 1 - (sw.iqr / sw.iqr.max())\n",
-    "beta = pd.Series(dispersion.values, index=sw.word).sort_index()\n",
+    "dispersion = 1 - (sig_words.iqr / sig_words.iqr.max())\n",
+    "beta = pd.Series(dispersion.values, index=sig_words.word).sort_index()\n",
     "Qone_scaled = Qone.multiply(beta, axis=1)\n",
     "N_total = train.multiply(beta, axis=1).sum(axis=1)\n",
     "predictions = Qone_scaled.sum(axis=1) / N_total\n",
@@ -631,8 +631,8 @@
     }
    ],
    "source": [
-    "dispersion = np.exp(abs(sw.iqr - sw.iqr.max()))\n",
-    "beta = pd.Series(dispersion.values, index=sw.word).sort_index()\n",
+    "dispersion = np.exp(abs(sig_words.iqr - sig_words.iqr.max()))\n",
+    "beta = pd.Series(dispersion.values, index=sig_words.word).sort_index()\n",
     "Qone_scaled = Qone.multiply(beta, axis=1)\n",
     "N_total = train.multiply(beta, axis=1).sum(axis=1)\n",
     "predictions = Qone_scaled.sum(axis=1) / N_total\n",
@@ -690,24 +690,17 @@
     "distance_point = game_reviews.rating.median()\n",
     "alpha = multipler * abs(weights - distance_point)**power + 1\n",
     "\n",
-    "dispersion = np.exp(abs(sw.iqr - sw.iqr.max()))\n",
-    "beta = pd.Series(dispersion.values, index=sw.word).sort_index()\n",
+    "dispersion = np.exp(abs(sig_words.iqr - sig_words.iqr.max()))\n",
+    "beta = pd.Series(dispersion.values, index=sig_words.word).sort_index()\n",
     "\n",
-    "dispersion = 1 - (sw.iqr / sw.iqr.max())\n",
-    "gamma = pd.Series(dispersion.values, index=sw.word).sort_index()\n",
+    "dispersion = 1 - (sig_words.iqr / sig_words.iqr.max())\n",
+    "gamma = pd.Series(dispersion.values, index=sig_words.word).sort_index()\n",
     "\n",
     "Qone_scaled = Qone.multiply(alpha*beta, axis=1)\n",
     "N_total = train.multiply(alpha*beta, axis=1).sum(axis=1)\n",
     "predictions = Qone_scaled.sum(axis=1) / N_total\n",
     "util.plot_results(test, predictions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
